# QThreadlearn

./: CMakeLists.txt  controller.cpp  controller.h  main.cpp  worker.cpp
